--- a/week2/style.css
+++ b/week2/style.css
@@ -217,3 +217,123 @@ body {
     top: 706px;
     margin: 5px;
 }
+
+.n1 {
+    border: 2px solid #000000;
+    border-radius: 30px;
+    padding: 5px;
+    font-family: sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 14px;
+    position: absolute;
+    left: 55px;
+    top: 58px;
+    cursor: default;
+}
+
+.n2 {
+    border: 2px solid #000000;
+    border-radius: 30px;
+    padding: 5px;
+    font-family: sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 14px;
+    position: absolute;
+    left: 55px;
+    top: 98px;
+    cursor: default;
+}
+
+.n3 {
+    border: 2px solid #000000;
+    border-radius: 30px;
+    padding: 5px;
+    font-family: sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 14px;
+    position: absolute;
+    left: 55px;
+    top: 138px;
+    cursor: default;
+}
+
+#chatside {
+    display: none;
+    cursor: default;
+}
+
+#searchside {
+    display: none;
+    cursor: default;
+}
+
+#imageside {
+    display: none;
+    cursor: default;
+}
+
+.opensidebaricon {
+    position: absolute;
+    left: 15px;
+    top: 15px;
+    cursor: default;
+}
+
+#sidebarchatgpt {
+    display: block;
+    cursor: default;
+}
+
+#sidebartoggle {
+    display: none;
+    cursor: default;
+}
+
+.n4 {
+    border: 2px solid #000000;
+    border-radius: 30px;
+    padding: 5px;
+    font-family: sans-serif;
+    background-color: #000000;
+    color: #ffffff;
+    font-size: 14px;
+    position: absolute;
+    left: 55px;
+    top: 3px;
+    cursor: default;
+}
+
+#sidebartoggletext {
+    display: none;
+    cursor: default;
+}
+
+#bar {
+    display: none;
+    cursor: default;
+}
+
+.bar {
+    background-color: #181818;
+    z-index: 2;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+}
+
+.barchatgpt {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    margin: 5px;
+}
+
+.barsidebar {
+    position: absolute;
+    left: 200px;
+    top: 10px;
+    margin: 5px;
+}
